--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,18 @@
-
-/* Flashlight Overlay */
-:root {
-  cursor: none;
-  --cursorX: 50vw;
-  --cursorY: 50vh;
+@font-face {
+  font-family: "Inter";
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/Inter-Light-BETA.woff2") format("woff2"),
+       url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/Inter-Light-BETA.woff") format("woff");
 }
-:root:before {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  pointer-events: none;
-  background: radial-gradient(
-    circle 10vmax at var(--cursorX) var(--cursorY),
-    rgba(0,0,0,0) 0%,
-    rgba(0,0,0,.5) 80%,
-    rgba(0,0,0,.95) 100%
-  )
+
+body {
+    color: #F9F9F9;
+    background: #274887;
+    font-family: "Inter";
+    font-size: 10vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    user-select: none;
+    cursor: default;
 }
