--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,8 @@ body {
 
 body.newbg {
     background-image:url(/sadpepe.png);
-    background-size: cover;
+    background-repeat:no-repeat;
+    background-size:100% 100%;
 }
 
 
